--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@
 DATABASE_URL="mysql://root:@localhost:3306/issue-tracker?"
 NEXTAUTH_URL = "http://localhost:3000"
 NEXTAUTH_SECRET = "a9eE0rKYkq2p3X+uVJ2Ly3qMkXyWE9B0nVdYlJ4HDJs="
+GOOGLE_CLIENT_ID = "926811517106-kf2q91vnchr9mfr54u8ganp6ik31qune.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
